--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-to-print": "^2.14.7",
+    "sweetalert2": "^11.4.23",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
